@@ -186,6 +186,7 @@ struct rd_logline {
   char logline_agency[65];
   char logline_publisher[65];
   char logline_composer[65];
+  char logline_conductor[65];
   char logline_user_defined[256];
   int  logline_usage_code;
   int  logline_enforce_length;
@@ -261,6 +262,8 @@ logline_agency			is a character arrray.
 logline_publisher		is a character arrray.
 
 logline_composer		is a character arrray.
+
+logline_conductor		is a character arrray.
 
 logline_user_defined	is a character arrray.
 
