@@ -42,6 +42,7 @@ struct rd_logline {
   char logline_agency[65];
   char logline_publisher[65];
   char logline_composer[65];
+  char logline_conductor[65];
   char logline_user_defined[256];
   int  logline_usage_code;
   int  logline_enforce_length;
